[package]
name = "tracing-rolling-file-inc"
version = "0.0.2"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"

description = "A rolling file appender with customizable rolling conditions."
homepage = "https://github.com/luyikk/tracing-rolling-file"
documentation = "https://docs.rs/tracing-rolling-file-inc/"
repository = "https://github.com/luyikk/tracing-rolling-file"
keywords = ["rolling", "logging", "tracing"]
categories = ["debugging"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dev-dependencies]
tempfile = "3.0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3",features = ["env-filter"] }
anyhow = "1"


[dependencies]
chrono = "0.4"
regex="1"
thiserror = "1"